List replaced by HashMap